Fixed home page spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,8 +16,8 @@ body{
 }
 
 header.masthead {
-  padding-top: 11rem;
-  padding-bottom: 15rem;
+  padding-top: 16%;
+  padding-bottom: 24%;
   background-image: url('../img/header2.jpg');
   width:100%;
   height:100%;
